--- a/fabfile/etc/supervisor/conf.d/eve.conf
+++ b/fabfile/etc/supervisor/conf.d/eve.conf
@@ -1,10 +1,13 @@
 [program:django]
 directory = %(directory)s
 user = %(user)s
-command = %(venv)s/bin/gunicorn_django -w 3 --bind 127.0.0.1:%(port)s
+command = %(venv)s/bin/gunicorn -w 3 --bind 127.0.0.1:%(port)s eve.wsgi:application
 stdout_logfile=%(log)s/django_out.log
 stderr_logfile=%(log)s/django_err.log
 autostart=true
 autorestart=true
 redirect_stderr=true
 environment=HOME='%(directory)s'
+
+[group:eve]
+programs=django
