Fix static in nginx

--- a/fabfile/etc/nginx/conf.d/eve.conf
+++ b/fabfile/etc/nginx/conf.d/eve.conf
@@ -3,12 +3,8 @@ server {
     server_name %(server_name)s;
     # no security problem here, since / is alway passed to upstream
     root %(public_dir)s;
-    # serve directly - analogous for static/staticfiles
-    location /(static|media)/ {
-        # if asset versioning is used
-        if ($query_string) {
-            expires max;
-        }
+    location ~ /(static|media)/ {
+        root %(server_name)s;
     }
     location / {
         proxy_pass_header Server;
