--- a/fabfile/etc/supervisor/conf.d/eve.conf
+++ b/fabfile/etc/supervisor/conf.d/eve.conf
@@ -9,5 +9,14 @@ autorestart=true
 redirect_stderr=true
 environment=HOME='%(directory)s'
 
+[program:sentry]
+directory=%(sentry_dir)s
+command=%(venv)s/bin/sentry --config=%(sentry_dir)s/sentry.conf.py  start http
+stdout_logfile=%(log)s/sentry_out.log
+stderr_logfile=%(log)s/sentry_err.log
+autostart=true
+autorestart=true
+redirect_stderr=true
+
 [group:eve]
-programs=django
+programs=django,sentry
