Config for sentry

--- a/fabfile/etc/nginx/conf.d/eve.conf
+++ b/fabfile/etc/nginx/conf.d/eve.conf
@@ -4,7 +4,7 @@ server {
     # no security problem here, since / is alway passed to upstream
     root %(public_dir)s;
     location ~ /(static|media)/ {
-        root %(server_name)s;
+        root %(public_dir)s;
     }
     location / {
         proxy_pass_header Server;
