--- a/fabfile/etc/nginx/conf.d/eve.conf
+++ b/fabfile/etc/nginx/conf.d/eve.conf
@@ -7,14 +7,15 @@ server {
         root %(public_dir)s;
     }
     location / {
-        proxy_pass_header Server;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Scheme $scheme;
-        proxy_connect_timeout 10;
-        proxy_read_timeout 10;
-        proxy_pass http://localhost:%(port)s/;
+        fastcgi_pass 127.0.0.1:%(port)s;
+        fastcgi_param PATH_INFO $fastcgi_script_name;
+        fastcgi_param REQUEST_METHOD $request_method;
+        fastcgi_param QUERY_STRING $query_string;
+        fastcgi_param CONTENT_TYPE $content_type;
+        fastcgi_param CONTENT_LENGTH $content_length;
+        fastcgi_pass_header Authorization;
+        fastcgi_intercept_errors off;
+        fastcgi_param REMOTE_ADDR $remote_addr;
     }
     # what to serve if upstream is not available or crashes
     error_page 500 502 503 504 /static/50x.html;
