--- a/fabfile/etc/supervisor/conf.d/eve.conf
+++ b/fabfile/etc/supervisor/conf.d/eve.conf
@@ -1,7 +1,7 @@
 [program:django]
 directory = %(directory)s
 user = %(user)s
-command = %(venv)s/bin/gunicorn -w 3 --bind 127.0.0.1:%(port)s eve.wsgi:application
+command = %(venv)s/bin/python manage.py runfcgi daemonize=false maxchildren=10 maxspare=2 minspare=2 method=prefork port=%(port)s host=127.0.0.1
 stdout_logfile=%(log)s/django_out.log
 stderr_logfile=%(log)s/django_err.log
 autostart=true
