--- a/fabfile/etc/supervisor/conf.d/eve.conf
+++ b/fabfile/etc/supervisor/conf.d/eve.conf
@@ -11,6 +11,7 @@ environment=HOME='%(app_dir)s'
 
 [program:sentry]
 directory=%(sentry_dir)s
+user = %(user)s
 command=%(venv)s/bin/sentry --config=%(sentry_dir)s/sentry.conf.py  start http
 stdout_logfile=%(log)s/sentry_out.log
 stderr_logfile=%(log)s/sentry_err.log
@@ -20,6 +21,7 @@ redirect_stderr=true
 
 [program:rqworker]
 directory=%(app_dir)s
+user = %(user)s
 command=%(venv)s/bin/python manage.py rqworker
 stdout_logfile=%(log)s/rqworker_out.log
 stderr_logfile=%(log)s/rqworker_err.log
@@ -29,6 +31,7 @@ redirect_stderr=true
 
 [program:emdr]
 directory=%(app_dir)s
+user = %(user)s
 command=%(venv)s/bin/python manage.py EMDR
 stdout_logfile=%(log)s/emdr_out.log
 stderr_logfile=%(log)s/emdr_err.log
