--- a/fabfile/etc/supervisor/conf.d/eve.conf
+++ b/fabfile/etc/supervisor/conf.d/eve.conf
@@ -25,7 +25,7 @@ user = %(user)s
 command=%(venv)s/bin/python manage.py rqworker
 stdout_logfile=%(log)s/rqworker_out.log
 stderr_logfile=%(log)s/rqworker_err.log
-autostart=true
+autostart=false
 autorestart=true
 redirect_stderr=true
 
